--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@as-integrations/next": "^3.2.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@supabase/supabase-js": "^2.52.0",
-    "apollo-server": "^3.13.0",
+    "@whatwg-node/server": "^0.10.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.0",
@@ -22,6 +22,7 @@
     "graphql-request": "^7.2.0",
     "lucide-react": "^0.525.0",
     "mapbox-gl": "^3.13.0",
+    "micro": "^10.0.1",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
