--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "perlin-noise": "^0.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-zoom-pan-pinch": "^3.7.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
