--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@chriscourses/perlin-noise": "github:chriscourses/perlin-noise",
     "@radix-ui/react-slot": "^1.2.3",
     "@supabase/supabase-js": "^2.52.0",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "@whatwg-node/server": "^0.10.10",
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
