--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "graphql": "^16.11.0",
+    "heic-to": "^1.2.1",
     "heic2any": "^0.0.4",
     "lucide-react": "^0.525.0",
     "mapbox-gl": "^3.13.0",
