--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "file-type": "^18.7.0",
     "graphql": "^16.11.0",
     "heic-to": "^1.2.1",
     "heic2any": "^0.0.4",
+    "jose": "^5.10.0",
     "lucide-react": "^0.525.0",
     "mapbox-gl": "^3.13.0",
     "next": "15.3.5",
