--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lucide-react": "^0.525.0",
     "mapbox-gl": "^3.13.0",
     "next": "15.3.5",
+    "obscenity": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-zoom-pan-pinch": "^3.7.0",
